--- a/front/index.html
+++ b/front/index.html
@@ -15,6 +15,6 @@
       <g class="samples"></g>
       <g class="lines"></g>
     </svg>
-    <script src="main.js"></script>
+    <script src="dist/main.js"></script>
   </body>
 </html>
