--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiplication</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="dist/main.js"></script>
   </head>
 
   <body>
@@ -15,6 +16,5 @@
       <g class="samples"></g>
       <g class="lines"></g>
     </svg>
-    <script type="module" src="dist/main.js"></script>
   </body>
 </html>
