--- a/front/index.html
+++ b/front/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-  </head>
-  <body>
-    <div id="app"></div>
+    <title>Multiplication</title>
     <script type="module" src="/src/main.ts"></script>
+  </head>
+
+  <body>
+    <h1>Multiplication</h1>
+    <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="50" cy="50" r="45" />
+      <g class="samples"></g>
+      <g class="lines"></g>
+    </svg>
   </body>
 </html>
