--- a/front/index.html
+++ b/front/index.html
@@ -19,14 +19,14 @@
       <label class="samples">
         <span>
           <span>Nombre de point:</span>
-          <span>45</span>
+          <span class="value">45</span>
         </span>
         <input type="range" min="0" max="100" />
       </label>
-      <label class="multiplicationFactor">
+      <label class="multiplicatorFactor">
         <span>
           <span>Multiplicateur:</span>
-          <span>23</span>
+          <span class="value">23</span>
         </span>
         <input type="range" min="0" max="100" />
       </label>
